fix: change nav list gap

--- a/christmas-shop/css/general/header.scss
+++ b/christmas-shop/css/general/header.scss
@@ -58,7 +58,7 @@ $white: #fff;
     list-style: none;
     display: flex;
     align-items: center;
-    column-gap: 9px;
+    column-gap: 8px;
   }
 
   .links {
